Fix line break on Departure sort link

--- a/app/assets/stylesheets/_tables.scss
+++ b/app/assets/stylesheets/_tables.scss
@@ -198,6 +198,7 @@
 
     td.flight-date, th.flight-date {
     	text-align: right;
+      width: 6em;
     }
 
     td.flight-flight {
